add prod build profiles